grid boxes styles and buttons

--- a/client/src/components/CategoryBanner.css
+++ b/client/src/components/CategoryBanner.css
@@ -1,3 +1,4 @@
 /*TODO: CENTER TITLE AND SUBTITLE  AND DESCRIPTION */
 /*TODO: ADD MEDIA QUERY FOR MOBILE AND ALL DEVICES */
 /*CENTER CANDLE CARE AND RETURN POLICY LINKS AND MAKE THEM A BIT SMALLER */
+/*TODDO: Move BACK TO SHOP TO BOTTOM OF PAGE */
